--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/components/icon.png" />
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dw2auacau/image/upload/v1752717439/icon_uebyr0.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda Online</title>
   </head>
